Basic layout in place

--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
     <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>COMP 333: Software Engineering Rebekah</title>
+    <title>Musey: The Music Rating Platform</title>
+    <link rel="stylesheet" href="home.css" />
 </head>
  
 <body>
-    <h1>HTML and CSS Samples</h1>
-    <h2>1. Basics</h2>
-    <p>This is a paragraph.</p>
+    <header class="center">
+    <h1 class="inferno noMargins">M U S E Y</h1>
+    <h4 class="noMargins"> &#11090 your &#11090 personalized &#11090 online &#11090 music &#11090 rating &#11090 platform &#11090</h4>
+    </header>
+
+    <div>
+        <h2 class="inferno">Rate and organize your favorite music</h2>
+        <div class="row">
+            <div class="column">
+              <img src="images/concert2.jpg" alt="Forest" style="width:100%; height:300px">
+            </div>
+            <div class="column">
+              <img src="images/concert3.jpg" alt="Mountains" style="width:100%; height:300px">
+            </div>
+            <div class="column">
+                <img src="images/concert4.jpg" alt="Mountains" style="width:100%; height:300px">
+              </div>
+          </div>
+    </div>
+
+
+    <div>
+        <h2 class="inferno">Customize your profile and meet others like you</h2>
+        <!-- iframe here -->
+    </div>
+
+    <div>
+        <h2 class="inferno">See what your friends are enjoying and discover new music</h2>
+    </div>
 
 </body></html>
