--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
  
 <body>
-    <header class="center">
+    
+    <div class="topnav">
+        <a href="#profile">profile</a>
+        <a href="#contact">contact</a>
+        <a href="#about">about</a>
+        <a href="#home">home</a>
+      </div>
+
+    <header class="center" id="home">
     <h1 class="inferno noMargins">M U S E Y</h1>
     <h4 class="noMargins"> &#11090 your &#11090 personalized &#11090 online &#11090 music &#11090 rating &#11090 platform &#11090</h4>
     </header>
 
-    <div>
+    <div id="about">
         <h2 class="inferno">Rate and organize your favorite music</h2>
         <div class="row">
             <div class="column">
