some reformatting and friend section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="topnav">
         <a href="#profile">profile</a>
-        <a href="#contact">contact</a>
+        <a href="https://facebook.com" target="_blank">contact</a>
         <a href="#about">about</a>
         <a href="#home">home</a>
       </div>
@@ -23,27 +23,41 @@
 
     <div id="about">
         <h2 class="inferno">Rate and organize your favorite music</h2>
-        <div class="row">
-            <div class="column">
-              <img src="images/concert2.jpg" alt="Forest" style="width:100%; height:300px">
-            </div>
-            <div class="column">
-              <img src="images/concert3.jpg" alt="Mountains" style="width:100%; height:300px">
-            </div>
-            <div class="column">
-                <img src="images/concert4.jpg" alt="Mountains" style="width:100%; height:300px">
-              </div>
-          </div>
+          <section class="row"> 
+            <img class="column" alt ="solid pink 1" src="images/concert2.jpg" width=550> 
+            <img class="column" alt ="solid pink 1" src="images/concert3.jpg" width=550>   
+            <img class="column" alt ="solid pink 2" src="images/concert4.jpg" width=550> </img> 
+          </section> 
     </div>
 
 
     <div>
         <h2 class="inferno">Customize your profile and meet others like you</h2>
-        <!-- iframe here -->
+        <section class="row">
+            <!-- <img alt ="solid pink 5" src="https://image.shutterstock.com/image-photo/simple-abstract-gradient-pastel-light-600w-732291076.jpg" width=1150> -->
+  </section>
     </div>
 
-    <div>
+    <div class="textAndImage">
         <h2 class="inferno">See what your friends are enjoying and discover new music</h2>
+              
+        <section class="row chunk-text">
+            <h4 class="columnText justified">
+                &#11090 "Allison" by Slowdive &#11090 </br>This song is such a banger I just discovered it last week when I was sitting in my friend's dorm room and they played it on their record player. 10 out of 10 I would really recommend for anyone who's interested in that shoegaze type stuff you know. 
+            </br> &#11090 Rebekah Song </br></br>
+
+            &#11090 "Baby My Phone" by Yameii Online &#11090 </br>You know that feeling you get and it's just indescribable and that is what god is about and that's what I worship and that's what I want to be around. That's all I want.
+            </br>&#11090 Bekah RSRSRS
+ 
+        </h4>
+          <h4 class="columnText justified">
+            &#11090 "no heart" by scum &#11090 </br>This isn't some fake sadness while you're smiling and counting your money from your repost but that's fine. Heartless. Freedom. Disgust in your eyes. You don't even care at all. You're the reason for all. 
+            </br> &#11090 Bex Sing</br></br>
+
+            &#11090 "Sicko Mode" by Travis Scott &#11090 </br>Astro... Yeah. Picture this. The sun is down and it's freezing cold. I'm trying to show you. That's what this song is about. That's what this song is. Listen for your ears.
+           </br>&#11090 Bexalicious (top contributer)
+        </h4> 
+          </section>  
     </div>
 
 </body></html>
