--- a/index.html
+++ b/index.html
@@ -31,31 +31,38 @@
     </div>
 
 
-    <div>
+    <div id="profile">
         <h2 class="inferno">Customize your profile and meet others like you</h2>
         <section class="row">
-            <!-- <img alt ="solid pink 5" src="https://image.shutterstock.com/image-photo/simple-abstract-gradient-pastel-light-600w-732291076.jpg" width=1150> -->
+            <iframe src="profile.html" width="100%" height="400"></iframe>
   </section>
     </div>
 
     <div class="textAndImage">
         <h2 class="inferno">See what your friends are enjoying and discover new music</h2>
               
-        <section class="row chunk-text">
+        <section class="row">
             <h4 class="columnText justified">
+                <section class="leftText">
                 &#11090 "Allison" by Slowdive &#11090 </br>This song is such a banger I just discovered it last week when I was sitting in my friend's dorm room and they played it on their record player. 10 out of 10 I would really recommend for anyone who's interested in that shoegaze type stuff you know. 
             </br> &#11090 Rebekah Song </br></br>
+            </section>
 
+            <section class="rightText">
             &#11090 "Baby My Phone" by Yameii Online &#11090 </br>You know that feeling you get and it's just indescribable and that is what god is about and that's what I worship and that's what I want to be around. That's all I want.
-            </br>&#11090 Bekah RSRSRS
- 
-        </h4>
-          <h4 class="columnText justified">
+            </br>&#11090 Bekah RSRSRS</br></br>
+        </section>
+
+            <section class="leftText">
             &#11090 "no heart" by scum &#11090 </br>This isn't some fake sadness while you're smiling and counting your money from your repost but that's fine. Heartless. Freedom. Disgust in your eyes. You don't even care at all. You're the reason for all. 
             </br> &#11090 Bex Sing</br></br>
+        </section>
 
+        <section class="rightText">
             &#11090 "Sicko Mode" by Travis Scott &#11090 </br>Astro... Yeah. Picture this. The sun is down and it's freezing cold. I'm trying to show you. That's what this song is about. That's what this song is. Listen for your ears.
            </br>&#11090 Bexalicious (top contributer)
+        </section>
+
         </h4> 
           </section>  
     </div>
