add profile section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="profile">
         <h2 class="inferno">Customize your profile and meet others like you</h2>
         <section class="row">
-            <iframe src="profile.html" width="100%" height="400"></iframe>
+            <iframe src="profile.html" width="100%" height="300" style="border:5px solid black;"></iframe>
   </section>
     </div>
 
