--- a/profile.html
+++ b/profile.html
@@ -8,5 +8,14 @@
 </head>
  
 <body>
+
+  <header>
+    <h1 class="inferno noMargins">B B U S H Y 8 8</h1>
+    <h4 class="noMargins"> &#11090 hi &#11090 friends &#11090 here &#11090 to &#11090 connect &#11090 xD &#11090</h4>
+    </header>
   
+    <section class="row">
+        <img class="column" alt ="solid pink 1" src="images/bbushy.jpg" width=200> 
+        <h4 class="column">hey everyone, you can call me bbushy88. </br> some of my favorite artists are </br> &#11090 smino </br> &#11090 KAYTRANADA </br> &#11090 SZA </br> &#11090 rihanna </br> &#11090 pink martini </h2>
+    </section>
 </body></html>
