add comp333 watermark

--- a/index.html
+++ b/index.html
@@ -67,4 +67,6 @@
           </section>  
     </div>
 
+    <h5 class="noMargins">This site was designed and published as part of the COMP 333 Software Engineering class at Wesleyan University. </h4>
+
 </body></html>
