readme and touchups

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div id="about">
         <h2 class="inferno">Rate and organize your favorite music</h2>
           <section class="row"> 
-            <img class="column" alt ="solid pink 1" src="images/concert2.jpg" width=550> 
-            <img class="column" alt ="solid pink 1" src="images/concert3.jpg" width=550>   
-            <img class="column" alt ="solid pink 2" src="images/concert4.jpg" width=550> </img> 
+            <img class="column" alt ="concert picture 2" src="images/concert2.jpg" width=550> 
+            <img class="column" alt ="concert picture 3" src="images/concert3.jpg" width=550>   
+            <img class="column" alt ="concert picture 4" src="images/concert4.jpg" width=550> </img> 
           </section> 
     </div>
 
