--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
     </header>
   
     <section class="row">
-        <img class="column" alt ="bbushy profile picture" src="images/bbushy.jpg" width=200> 
+        <img class="column" alt ="bbushy profile picture" src="images/bbushy.JPG" width=200> 
         <h4 class="column">hey everyone, you can call me bbushy88. </br> some of my favorite artists are </br> &#11090 smino </br> &#11090 KAYTRANADA </br> &#11090 SZA </br> &#11090 rihanna </br> &#11090 pink martini </h2>
     </section>
 </body></html>
